fixed alignment of menu items

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -34,7 +34,8 @@
 
 
 .centercenter{
-
+margin-left: auto;
+margin-right: auto;
   
 }
 
@@ -43,7 +44,9 @@
   display:flex;
   flex-wrap: wrap;
   flex-direction: column;
-  align-content: flex-start;
+  row-gap: 0px;
+  align-content: center;
+
 
   gap: 10px;
 
